[package]
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2018"
name = "embassy-actor"
version = "0.1.0"

[workspace]

[dependencies]
async-io = "1.3.1"
embassy = { version = "0.1.0", path = "../embassy", features = ["log"] }
embassy-std = { version = "0.1.0", path = "../embassy-std" }
embassy-actor-macros = { path = "../embassy-actor-macros" }
heapless = "0.6"
env_logger = "0.8.2"
futures = { version = "0.3.8", default-features = false, features = ["async-await"] }
log = "0.4.11"
nix = "0.19.1"
